--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div class="container">
                       <h2 class="text-color"><b>Grilled Fish</b></h2> 
                       <p>Try these simple grilled fish recipes for grouper, tuna, catfish, halibut, trout, and swordfish. We guarantee sizzling-good meals.</p> 
-                      <a target="_blank" class="style-btn" href="https://www.myrecipes.com/">TRY NOW</a>
+                      <a target="_blank" class="style-btn" href="https://www.myrecipes.com/">TRY NOW<i class="fas fa-xl fa-arrow-right"></i></a>
                     </div>
                   </div>
 
@@ -92,7 +92,7 @@
                     <div class="container">
                       <h2 class="text-color" ><b>Potliker Soup</b></h2> 
                       <p>Potlikker Soup contains favorite flavors of a traditional New Year's day meal—collard greens and ham hock. </p> 
-                      <a target="_blank" class="style-btn" href="https://www.myrecipes.com/">TRY NOW</a>
+                      <a target="_blank" class="style-btn" href="https://www.myrecipes.com/">TRY NOW<i class="fas fa-xl fa-arrow-right"></i></a>
                     </div>
                   </div>
 
@@ -102,7 +102,7 @@
                       <h2 class="text-color"><b>Classic Meat Loaf</b></h2> 
                       <p>Combining three types of ground meat lends more depth to the overall flavor of this meat loaf recipe. Serve with roasted carrots.
                     </p> 
-                      <a target="_blank" class="style-btn" href="https://www.myrecipes.com/">TRY NOW</a>
+                      <a target="_blank" class="style-btn" href="https://www.myrecipes.com/">TRY NOW<i class="fas fa-xl fa-arrow-right"></i></a>
                     </div>
                   </div>
             </div>
