--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!-- HOME SECTION OF THIS PAGE -->
 
 
-    <section class="bg-area">
+    <section id="home" class="bg-area">
         <div class="half-width">
             <h1> 
                 <span class="text-color"> Skip</span> The Diet,<br/>
@@ -53,7 +53,7 @@
 <!-- ABOUT ME SECTION OF THIS PAGE -->
 
 
-    <section class="about-bg">
+    <section id="about" class="about-bg">
         <div class="half-width">
             <img src="images/female/pngfind.com-chef-png-488978.png" alt="">
         </div>
@@ -68,7 +68,7 @@
 <!-- MY RECIPES OF THIS PAGE     -->
 <!-- MY RECIPES OF THIS PAGE     -->
 
-        <div class="my-recipes">
+        <div id="recipes" class="my-recipes">
             <h2 class="text-color">
                 <b>MY RECIPES</b>
             </h2>
@@ -76,7 +76,7 @@
             </p>
         </div>
 
-        <section>
+        <section >
             <div class="recipes-container">
                 <div class="card">
                     <img src="images/food/Project Cover.jpg" alt="Avatar" style="width:100%">
@@ -111,7 +111,7 @@
 <!-- MY FOLLOWERS SHOWING SECTION OF THIS PAGE         -->
 <!-- MY FOLLOWERS SHOWING SECTION OF THIS PAGE         -->
 
-                <div class="container">
+                <div id="followers" class="container">
                     <div class="count">
                         <div class="sub-count">
                             <h1 class="text-color">50k</h1>
