--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!-- HOME SECTION OF THIS PAGE -->
 
 
-    <section id="home" class="bg-area">
+    <section  class="bg-area">
         <div class="half-width">
             <h1> 
                 <span class="text-color"> Skip</span> The Diet,<br/>
